// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FiatLabel when amount is null renders correctly 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#000000",
        "fontFamily": "System",
        "fontWeight": "400",
      },
      undefined,
    ]
  }
>
  - SEK
</Text>
`;

exports[`FiatLabel when currency is SEK renders -300.5 SEK correctly 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#000000",
        "fontFamily": "System",
        "fontWeight": "400",
      },
      undefined,
    ]
  }
>
  -300.50 kr
</Text>
`;

exports[`FiatLabel when currency is SEK renders 0 SEK correctly 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#000000",
        "fontFamily": "System",
        "fontWeight": "400",
      },
      undefined,
    ]
  }
>
  0 kr
</Text>
`;

exports[`FiatLabel when currency is SEK renders 2 SEK correctly 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#000000",
        "fontFamily": "System",
        "fontWeight": "400",
      },
      undefined,
    ]
  }
>
  2 kr
</Text>
`;

exports[`FiatLabel when currency is SEK renders 2.00 SEK correctly 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#000000",
        "fontFamily": "System",
        "fontWeight": "400",
      },
      undefined,
    ]
  }
>
  2 kr
</Text>
`;

exports[`FiatLabel when currency is SEK renders 2.30 SEK correctly 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#000000",
        "fontFamily": "System",
        "fontWeight": "400",
      },
      undefined,
    ]
  }
>
  2.30 kr
</Text>
`;

exports[`FiatLabel when currency is SEK renders 4000 SEK correctly 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#000000",
        "fontFamily": "System",
        "fontWeight": "400",
      },
      undefined,
    ]
  }
>
  4,000 kr
</Text>
`;

exports[`FiatLabel when currency is USD renders -20.5 USD correctly 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#000000",
        "fontFamily": "System",
        "fontWeight": "400",
      },
      undefined,
    ]
  }
>
  -$20.50
</Text>
`;

exports[`FiatLabel when currency is USD renders 0 USD correctly 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#000000",
        "fontFamily": "System",
        "fontWeight": "400",
      },
      undefined,
    ]
  }
>
  $0
</Text>
`;

exports[`FiatLabel when currency is USD renders 2 USD correctly 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#000000",
        "fontFamily": "System",
        "fontWeight": "400",
      },
      undefined,
    ]
  }
>
  $2
</Text>
`;

exports[`FiatLabel when currency is USD renders 2.00 USD correctly 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#000000",
        "fontFamily": "System",
        "fontWeight": "400",
      },
      undefined,
    ]
  }
>
  $2
</Text>
`;

exports[`FiatLabel when currency is USD renders 2.30 USD correctly 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#000000",
        "fontFamily": "System",
        "fontWeight": "400",
      },
      undefined,
    ]
  }
>
  $2.30
</Text>
`;

exports[`FiatLabel when currency is USD renders 4000 USD correctly 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#000000",
        "fontFamily": "System",
        "fontWeight": "400",
      },
      undefined,
    ]
  }
>
  $4,000
</Text>
`;
